# openmessaging-benchmark

./: CLAUDE.md
benchmark-framework/: .factorypath
benchmark-framework/src/main/java/io/openmessaging/benchmark/: Workload.java  WorkloadGenerator.java
benchmark-framework/src/main/java/io/openmessaging/benchmark/worker/commands/: TopicsInfo.java
payload/: payload-10Kb.data
wasm-data-transform/: go.mod  transform.go
wasm-data-transform/avro/: avro.wasm  go.mod  go.sum  transform.go  transform.yaml
wasm-data-transform/drop/: drop.wasm  go.mod  transform.go  transform.yaml
wasm-data-transform/noop/: go.mod  go.sum  noop.wasm  transform.go  transform.yaml
wasm-data-transform/noop-js/: README.md  esbuild.js  noop-js.wasm  package-lock.json  package.json  transform.yaml
wasm-data-transform/noop-rs/: Cargo.toml  noop-rs.wasm  transform.yaml
wasm-data-transform/redact/: go.mod  redact.nosimd.wasm  redact.simd.wasm  redact.wasm  transform.go  transform.yaml
wasm-data-transform/redact-js/: esbuild.js  package-lock.json  package.json  redact-js.wasm  transform.yaml
wasm-data-transform/redact-js/src/: index.ts
wasm-data-transform/redact-rs/: Cargo.toml  redact.wasm  transform.yaml
wasm-data-transform/redact-rs/src/: avro.rs  main.rs
