[package]
name = "redact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
redpanda-transform-sdk = "0.2.0"
serde = {version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
talc = { version = "4.3.1", default-features = false, features = ["lock_api"] }
